force-app/main/default/objects/WorkRamp_Event__c/WorkRamp_Event__c.object-meta.xml
<CustomObject>
    <label>WorkRamp Event</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WorkRamp Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>