force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventId__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventId__c</fullName>
    <label>WorkRamp Event Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>