force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventName__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventName__c</fullName>
    <label>WorkRamp Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>