force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventSessionAttendeeId__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventSessionAttendeeId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>WorkRamp Event Session Attendee Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>