force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventSessionEndTime__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventSessionEndTime__c</fullName>
    <label>WorkRamp EventSession End Time</label>
    <type>DateTime</type>
</CustomField>