force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventSessionId__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventSessionId__c</fullName>
    <label>WorkRamp EventSession Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>