force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventSessionLearnerAttended__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventSessionLearnerAttended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WorkRamp EventSession Learner Attended</label>
    <type>Checkbox</type>
</CustomField>