force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventSessionLearnerEmail__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventSessionLearnerEmail__c</fullName>
    <label>WorkRamp EventSession Learner Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>