force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventSessionLearnerGroups__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventSessionLearnerGroups__c</fullName>
    <label>WorkRamp EventSession Learner Groups</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>