force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventSessionLearnerId__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventSessionLearnerId__c</fullName>
    <label>WorkRamp EventSession Learner Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>