force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventSessionLearnerName__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventSessionLearnerName__c</fullName>
    <label>WorkRamp EventSession Learner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>