force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventSessionLearnerRegDate__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventSessionLearnerRegDate__c</fullName>
    <label>WorkRamp EventSession Learner Reg Date</label>
    <type>DateTime</type>
</CustomField>