force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventSessionLearnerRegStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventSessionLearnerRegStatus__c</fullName>
    <label>WorkRamp EventSession Learner Reg Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>