force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventSessionStartTime__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventSessionStartTime__c</fullName>
    <label>WorkRamp EventSession Start Time</label>
    <type>DateTime</type>
</CustomField>