force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventSessionTitle__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventSessionTitle__c</fullName>
    <label>WorkRamp EventSession Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>