force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventSessionZoomJoinUrl__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventSessionZoomJoinUrl__c</fullName>
    <label>WorkRamp EventSession Zoom Join Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>