force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventSessionZoomMeetingId__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventSessionZoomMeetingId__c</fullName>
    <label>WorkRamp EventSession Zoom Meeting Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>