force-app/main/default/objects/WorkRamp_Event__c/fields/WorkRampEventSessionZoomStartUrl__c.field-meta.xml
<CustomField>
    <fullName>WorkRampEventSessionZoomStartUrl__c</fullName>
    <label>WorkRamp EventSession Zoom Start Url</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>